--- a/src/components/ShellForms/ShellForms.css
+++ b/src/components/ShellForms/ShellForms.css
@@ -22,6 +22,6 @@
     background-color: #f2f2f2;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
-    grid-gap: .5rem;
+    grid-gap: 1rem;
     padding: 1rem;
 }
